# sas-eew-group-1

./: .gitignore  README.md  pyproject.toml  visualise_layout.py
data/: README.md  ikea_products_NL.csv  ikea_skus_NL.txt  selected_simulation_items.csv
docs/: libraries.md
examples/: README.md  elevator_animated_yield.py
scripts/: Data_analyse.ipynb  SASGaussianCopula.ipynb  SASGaussianCopula__1_.ipynb  SASGaussianCopula__2.ipynb  ikea_details_scraper.py  ikea_sku_scraper.py  order_generator_exp.ipynb  product_selector.py
src/: main.py
src/models/: agv.py  charger.py  controlsystem  controlsystem.py  graph.py  item.py  order_generator.py  server.py  service_time_generator.py  task  task.py  warehouse_layout.py
src/utils/: paths.py
tests/: README.md  test_agv.py  test_charger.py  test_control_system.py  test_control_system_large.py  test_graph.py  test_server.py
