[project]
name = "SAS_EEW_Group1"
version = "0.1.0"
description = "Simulation and Analysis System for EEW Group 1"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "greenlet>=3.3.2",
    "pandas>=3.0.2",
    "pillow>=12.1.1",
    "requests>=2.33.1",
    "salabim==26.0.4.post0",
    "tqdm>=4.67.3",
    "matplotlib>=3.10.0",
    "networkx>=3.6.1"
]

[project.urls]
Homepage = "https://github.com/chenneman/sas-eew-group-1"
Repository = "https://github.com/chenneman/sas-eew-group-1.git"
Issues = "https://github.com/chenneman/sas-eew-group-1/issues"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
